edition = "2023";  // successor to proto2 and proto3

package central;

import "google/protobuf/timestamp.proto";
import "storage/network_flow.proto";
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/central;central";
option features.(pb.go).api_level = API_OPAQUE;

message NetworkFlowUpdate {
  // Network flows that were added or removed from the last time state was sent to Central.
  repeated storage.NetworkFlow updated = 1 [lazy = true];
  repeated storage.NetworkEndpoint updated_endpoints = 3 [lazy = true];

  google.protobuf.Timestamp time = 2 [lazy = true];
}

message PushNetworkEntitiesRequest {
  repeated storage.NetworkEntityInfo entities = 1 [lazy = true];
  int64 seqID = 2;
}
